fixed wrong size next piece grid

--- a/app/assets/stylesheets/components/_tetris.scss
+++ b/app/assets/stylesheets/components/_tetris.scss
@@ -243,8 +243,8 @@ h1 {
     }
 
     .next-grid {
-      width: 22px;
-      height: 22px;
+      width: 25px;
+      height: 25px;
     }
 
     .volume-control {
